--- a/src/rekammedis/RMPenilaianAwalMedisRalanRehabMedik.form
+++ b/src/rekammedis/RMPenilaianAwalMedisRalanRehabMedik.form
@@ -933,7 +933,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024 09:39:52"/>
+                                <StringItem index="0" value="16-12-2024 10:16:44"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy HH:mm:ss"/>
@@ -1853,7 +1853,7 @@
                         </Component>
                         <Component class="widget.Label" name="jLabel112">
                           <Properties>
-                            <Property name="text" type="java.lang.String" value="Terapi Akupuntur :"/>
+                            <Property name="text" type="java.lang.String" value="Goal :"/>
                             <Property name="name" type="java.lang.String" value="jLabel112" noResource="true"/>
                           </Properties>
                           <Constraints>
@@ -1864,7 +1864,7 @@
                         </Component>
                         <Component class="widget.Label" name="jLabel113">
                           <Properties>
-                            <Property name="text" type="java.lang.String" value="Terapi lainnya :"/>
+                            <Property name="text" type="java.lang.String" value="Edukasi :"/>
                             <Property name="name" type="java.lang.String" value="jLabel113" noResource="true"/>
                           </Properties>
                           <Constraints>
@@ -1880,7 +1880,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024"/>
+                                <StringItem index="0" value="16-12-2024"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -1901,7 +1901,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024"/>
+                                <StringItem index="0" value="16-12-2024"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -1922,7 +1922,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024"/>
+                                <StringItem index="0" value="16-12-2024"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -1943,7 +1943,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024"/>
+                                <StringItem index="0" value="16-12-2024"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -1964,7 +1964,7 @@
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="1">
-                                <StringItem index="0" value="22-11-2024"/>
+                                <StringItem index="0" value="16-12-2024"/>
                               </StringArray>
                             </Property>
                             <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -2335,7 +2335,7 @@
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="1">
-                            <StringItem index="0" value="22-11-2024"/>
+                            <StringItem index="0" value="16-12-2024"/>
                           </StringArray>
                         </Property>
                         <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -2363,7 +2363,7 @@
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="1">
-                            <StringItem index="0" value="22-11-2024"/>
+                            <StringItem index="0" value="16-12-2024"/>
                           </StringArray>
                         </Property>
                         <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
