--- a/src/simrskhanza/frmUtama.form
+++ b/src/simrskhanza/frmUtama.form
@@ -9876,7 +9876,7 @@
             <Property name="icon" type="javax.swing.Icon" noResource="true" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/picture/History.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dev RSPM : v1.0.6"/>
+            <Property name="text" type="java.lang.String" value="Dev RSPM : v1.0.5"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
             <Property name="iconTextGap" type="int" value="3"/>
             <Property name="name" type="java.lang.String" value="jLabel9" noResource="true"/>
@@ -9884,6 +9884,9 @@
               <Dimension value="[287, 23]"/>
             </Property>
           </Properties>
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Dev RSPM : v1.0.5"/>
+          </AccessibilityProperties>
         </Component>
       </SubComponents>
     </Container>
